Made changed to allow search text to be sent to PHP back end

--- a/tk.html
+++ b/tk.html
@@ -159,7 +159,7 @@
 
     	<div id="search" class="container">
              <form action="PHP/TK.php" method="get">
-                 <input id="searchtext" type="text" name="searchtext" autofocus></input>
+                 <input id="searchtext" type="text" name="searchquery" autofocus></input>
     		<!-- <input id="searchtext" autofocus></input>
         <img class="searchButton" id="searchBtn" src="Images/searchBtn.png"> -->
                  <input class="searchButton" id="searchBtn" type="image" src="Images/searchBtn.png" alt="Submit Form" />
